--- a/client/hamburger.html
+++ b/client/hamburger.html
@@ -3,8 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>HAMBURGER</title>
+    <link rel="stylesheet" type="text/css" href="./css/common.css">
+    <script type="text/javascript" src="./js/common/jquery-3.5.1.min.js"></script>
+    <script type="text/javascript" src="./js/hamburger/game.js"></script>
+    <script type="text/javascript" src="./js/hamburger/scene_main.js"></script>
+    <script type="text/javascript" src="./js/hamburger/init.js"></script>
 </head>
 <body>
-
+    <canvas id="scene" width="800" height="600"></canvas>
+    <canvas id="backend" width="800" height="600" style="display: none;"></canvas>
+    <article id="fps-viewer">0 FPS</article>
 </body>
 </html>
